# background-gen

./: .dockerignore  Dockerfile  README.md  pyproject.toml  setup.cfg
.github/workflows/: docker.yml
app/: __init__.py  config.py  main.py  shaders.py  telemetry.py
docs/: product-tech-spec.md
static/: index.html  presets.json  service-worker.js
static/css/: app.css
static/js/: context.js  controls.js  main.js  noise.js  presets.js  renderer.js  state.js  utils.js
static/js/webgl/: shaders.js
tests/: test_app.py  test_frontend_assets.py  test_grain_generation.py
