[project]
name = "background-gen"
version = "0.1.0"
description = "Minimal, modular wallpaper generator"
authors = [{ name = "Background Gen" }]
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "httpx>=0.26", "python-dotenv>=1.0"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=63", "wheel"]
build-backend = "setuptools.build_meta"
