[metadata]
name = background-gen
version = 0.1.0

[options]
packages = find:
python_requires = >=3.11
install_requires =
    fastapi>=0.115.0
    uvicorn[standard]>=0.30.0
    pydantic>=2.6
    pydantic-settings>=2.2

[options.extras_require]
dev =
    pytest>=7.0
    httpx>=0.26
    python-dotenv>=1.0
